--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,19 +2,37 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="YanaAppBaseTheme" parent="@style/Yana_actionbar">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
     <!-- Application theme. -->
     <style name="YanaAppTheme" parent="@style/YanaAppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="vpiTabPageIndicatorStyle">@style/CustomTabPageIndicator</item>
     </style>
+
+    <style name="CustomTabPageIndicator" parent="Widget.TabPageIndicator">
+        <item name="android:background">@drawable/tab_indicator_ab_yana</item>
+        <!-- <item name="android:textAppearance">@style/CustomTabPageIndicator.Text</item> -->
+        <item name="android:textColor">#FFFFFFFF</item>
+        <item name="android:textSize">16sp</item>
+        <!-- <item name="android:divider">@drawable/tabcustom_tab_indicator_divider</item> -->
+        <item name="android:dividerPadding">10dp</item>
+        <item name="android:showDividers">middle</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:fadingEdge">horizontal</item>
+        <item name="android:fadingEdgeLength">8dp</item>
+    </style>
+
+    <!-- <style name="CustomTabPageIndicator.Text" parent="android:TextAppearance.Medium"> -->
+    <!-- <item name="android:typeface">monospace</item> -->
+    <!-- </style> -->
 
 </resources>
