--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="margin_normal">16dp</dimen>
     <dimen name="margin_large">24dp</dimen>
     <dimen name="margin_very_large">32dp</dimen>
+    <dimen name="stroke">1dp</dimen>
 
 </resources>
