--- a/res/layout/item_feed_news.xml
+++ b/res/layout/item_feed_news.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="@dimen/margin_small" >
 
     <TextView
@@ -52,4 +52,4 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/secondary_text_light" />
 
-</RelativeLayout>
+</merge>
