--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -7,5 +7,7 @@
     <dimen name="margin_large">24dp</dimen>
     <dimen name="margin_very_large">32dp</dimen>
     <dimen name="stroke">1dp</dimen>
+    <dimen name="min_height">48dp</dimen>
+    <dimen name="min_width_spinner_menu">120dp</dimen>
 
 </resources>
