--- a/res/layout/item_feed_big.xml
+++ b/res/layout/item_feed_big.xml
@@ -8,10 +8,9 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:background="@drawable/item_image_bkg"
         android:contentDescription="@string/feed_item_image_content_description"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/default_image" />
 
     <TextView
         android:id="@+id/title"
