Adding gesture detector to show/hide the action bar on detail screen

--- a/res/layout/fragment_feed_item.xml
+++ b/res/layout/fragment_feed_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <WebView
+    <com.mathieucalba.yana.ui.widgets.GestureWebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
