--- a/res/layout/activity_feed_item.xml
+++ b/res/layout/activity_feed_item.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+        android:id="@+id/pager_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
