--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -12,7 +12,7 @@
         android:background="#666666" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+        android:id="@+id/pager_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
