--- a/res/layout/fragment_feed_list.xml
+++ b/res/layout/fragment_feed_list.xml
@@ -6,16 +6,6 @@
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/empty_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/feed_list_empty"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
