--- a/res/layout/fragment_feed_item.xml
+++ b/res/layout/fragment_feed_item.xml
@@ -6,17 +6,6 @@
     <com.mathieucalba.yana.ui.widgets.GestureWebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/empty_text_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/please_select_item"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/black"
-        android:visibility="gone" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
